--- a/styles.css
+++ b/styles.css
@@ -15,75 +15,131 @@
 }
 
 .light-mode {
-    --bg: #ffffff;
+    --bg: #E6DDDE;
     --panel: #f5f5f5;
-    --text: #000000;
+    --text: #443235;
     --hover: #e0e0e0;
-    --accent: #454545; 
+    --accent: #443235; 
     --article: #ffffff;
     --focus: #e5e5e5;
     --logo: #008037; 
     --ear: #007acc; 
     --header: #ffffff;
-    --menu: #f5f5f5;
+    --menu: #71535726;
     color-scheme: light; 
-    header .logo {color: var(--text)};
-    header {border-bottom: 1px solid #00000050};
+    header .logo {color: #443235};
+    header {border-bottom: 1px solid #000000; background-color: #E6DDDE};
     main article {font-weight:400};
     #copy-message {color: #ffffff};
     .back-to-top {background-color: #454545};
+    nav#sidebar ul li a {color:#443235};
+    main article h1 { font-size: 1.1rem; font-weight: 400; margin: 0 0 0.6rem 0; color: #443235; }
+main article h2 { font-size: 0.9rem; font-weight: 500; margin: 0.7rem 0 0.6rem 0; color: #443235; }
+main article h3 { font-size: 0.9rem; font-weight: 700; margin: 1rem 0 0.6rem 0; color: var(--text); }
 
     .link {
-    color: #0969DA;
+    color: #015dc9;
     text-decoration: none;
-}
-
-
-
-@media (max-width: 768px) {
-
-    nav#sidebar {
-
-        font-size: 1rem;
-
-        font-weight: 400;
-    }
-
-    .border {background-color:#e5e5e5}
-
 
 }
 
-.link:visited { color: #0969DA; }
-.link:hover { color: #0969DA; text-decoration: underline; }
-.link:active { color: #0969DA; }
 
-.page-break {border-bottom: 1px solid #00000050};
+.link:visited { color: #015dc9; }
+.link:hover { color: #015dc9; text-decoration: underline; }
+.link:active { color: #015dc9; }
+
+.page-break {border-bottom: 1px solid #443235};
+
+.orange{
+color: #ff8c01;
+font-weight: 400;
+font-size: 0.8rem;
+}
+
+.green{
+color: #006b3e;
+font-weight: 400;
+font-size: 0.8rem;
+}
+
+.red{
+color: #ED2938;
+font-weight: 400;
+font-size: 0.8rem;
+}
 
     @media (hover: none) and (pointer: coarse) {
     nav#sidebar ul li a:focus {
         outline: none;
-        background-color: #dddddd; /* match your tap color */
-        color: #1f1f1f;
+        background-color: #E6DDDE; /* match your tap color */
+        color: #443235;
     }
 }
 
 nav#sidebar ul li a.tap-active {
-  background-color: #dddddd;
-  color: #1f1f1f;
+  background-color: #E6DDDE;
+  color: #443235;
   transition: background-color 0.2s;
 }
 
 nav#sidebar ul li a.active {
-    background-color: #e5e5e5;
-    color: #1f1f1f;
+    background-color: #E6DDDE;
+    color: #443235;
 }
 
 @media (hover: hover) and (pointer: fine) {
     nav#sidebar ul li a:hover {
-        background-color: #dddddd;
-        color: #1f1f1f;
+        background-color: #E6DDDE;
+        color: #443235;
     }
+}
+
+@media (max-width: 768px) {
+    .border {background-color:#71535726}
+    .back-to-top {
+
+  background-color: #d5c8ca;
+
+}
+
+/* Arrow icon */
+.back-to-top::before {
+
+  border-left: 2px solid #443235;
+  border-bottom: 2px solid #443235;
+
+}
+
+.back-to-top.show:hover::before,
+.back-to-top.show:focus::before {
+  border-color: #443235;
+}
+
+    @media (hover: none) and (pointer: coarse) {
+    nav#sidebar ul li a:focus {
+        outline: none;
+        background-color: #ffffff80; /* match your tap color */
+        color: #443235;
+    }
+}
+
+nav#sidebar ul li a.tap-active {
+  background-color: #ffffff80;
+  color: #443235;
+  transition: background-color 0.2s;
+}
+
+nav#sidebar ul li a.active {
+    background-color: #ffffff80;
+    color: #443235;
+}
+
+@media (hover: hover) and (pointer: fine) {
+    nav#sidebar ul li a:hover {
+        background-color: #ffffff80;
+        color: #443235;
+    }
+}
 }
 
 }
@@ -193,8 +249,8 @@ header .logo i {
 }
 
 .dark-icon-size{
-   width: 24px;
-   height: 24px;
+   width: 22px;
+   height: 22px;
 }
 
 .logo-image{
@@ -399,19 +455,19 @@ nav#sidebar ul li.icon-item {
 }
 
     .dark-mode{
-        fill: var(--accent) !important;
+        fill: var(--text) !important;
     }
 
     .dark-mode:hover,
     .dark-mode:active,
     .dark-mode:focus {
-        fill: var(--accent) !important;
+        fill: var(--text) !important;
         cursor: pointer; /* still show pointer for tap */
     }
 
 .dark-icon-size{
-   width: 26px;
-   height: 26px;
+   width: 24px;
+   height: 24px;
 }
 
   .nested-columns {
