--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 }
 
 .light-mode {
-    --bg: #E6DDDE;
+    --bg: #ffffff;
     --panel: #f5f5f5;
     --text: #443235;
     --hover: #e0e0e0;
@@ -25,35 +25,17 @@
     --logo: #008037; 
     --ear: #007acc; 
     --header: #ffffff;
-    --menu: #71535726;
+    --menu: #EAE5E6;
     color-scheme: light; 
     header .logo {color: #443235};
-    header {border-bottom: 1px solid #654A4E; background-color: #E6DDDE};
+    header {border-bottom: 1px solid #443235; background-color: #ffffff};
     main article {font-weight:400};
     #copy-message {color: #ffffff};
     .back-to-top {background-color: #454545};
     nav#sidebar ul li a {color:#443235};
-    main article h1 {font-weight: 500; margin: 0 0 0.6rem 0; color: #654A4E; }
-main article h2 {font-weight: 500; margin: 0.7rem 0 0.6rem 0; color: #654A4E; }
-main article h3 {font-weight: 700; margin: 1rem 0 0.6rem 0; color: var(--text); }
-
-.custom-font {
-  color: #654A4E
-}
-
-.thomas {
-   color: #654A4E
-
-}
-
-.link-icon {       /* small space after text */
-  color: var(--654A4E);
-         /* remove the margin-top that causes line break */
-}
-
-.link-icon:hover{
-  color: var(--text);
-}
+    main article h1 { font-size: 1.1rem; font-weight: 400; margin: 0 0 0.6rem 0; color: #443235; }
+main article h2 { font-size: 0.9rem; font-weight: 500; margin: 0.7rem 0 0.6rem 0; color: #443235; }
+main article h3 { font-size: 0.9rem; font-weight: 700; margin: 1rem 0 0.6rem 0; color: var(--text); }
 
     .link {
     color: #015dc9;
@@ -66,48 +48,42 @@ main article h3 {font-weight: 700; margin: 1rem 0 0.6rem 0; color: var(--text); 
 .link:hover { color: #015dc9; text-decoration: underline; }
 .link:active { color: #015dc9; }
 
-.page-break {border-bottom: 1px solid #654A4E};
+.page-break {border-bottom: 1px solid #443235};
 
 .orange{
 color: #ff8c01;
-font-weight: 400;
-font-size: 0.8rem;
 }
 
 .green{
 color: #006b3e;
-font-weight: 400;
-font-size: 0.8rem;
 }
 
 .red{
 color: #ED2938;
-font-weight: 400;
-font-size: 0.8rem;
 }
 
     @media (hover: none) and (pointer: coarse) {
     nav#sidebar ul li a:focus {
         outline: none;
-        background-color: #E6DDDE; /* match your tap color */
+        background-color: #ffffff; /* match your tap color */
         color: #443235;
     }
 }
 
 nav#sidebar ul li a.tap-active {
-  background-color: #E6DDDE;
+  background-color: #ffffff;
   color: #443235;
   transition: background-color 0.2s;
 }
 
 nav#sidebar ul li a.active {
-    background-color: #E6DDDE;
+    background-color: #ffffff;
     color: #443235;
 }
 
 @media (hover: hover) and (pointer: fine) {
     nav#sidebar ul li a:hover {
-        background-color: #E6DDDE;
+        background-color: #ffffff;
         color: #443235;
     }
 }
@@ -116,7 +92,7 @@ nav#sidebar ul li a.active {
     .border {background-color:#71535726}
     .back-to-top {
 
-  background-color: #d5c8ca;
+  background-color: #EAE5E6;
 
 }
 
@@ -136,25 +112,25 @@ nav#sidebar ul li a.active {
     @media (hover: none) and (pointer: coarse) {
     nav#sidebar ul li a:focus {
         outline: none;
-        background-color: #ffffff80; /* match your tap color */
+        background-color: #71535726; /* match your tap color */
         color: #443235;
     }
 }
 
 nav#sidebar ul li a.tap-active {
-  background-color: #ffffff80;
+  background-color: #71535726;
   color: #443235;
   transition: background-color 0.2s;
 }
 
 nav#sidebar ul li a.active {
-    background-color: #ffffff80;
+    background-color: #71535726;
     color: #443235;
 }
 
 @media (hover: hover) and (pointer: fine) {
     nav#sidebar ul li a:hover {
-        background-color: #ffffff80;
+        background-color: #71535726;
         color: #443235;
     }
 }
