--- a/styles.css
+++ b/styles.css
@@ -15,28 +15,29 @@
 }
 
 .light-mode {
-    --bg: #ffffff;
+    --bg: #f6f5f4;
     --panel: #f5f5f5;
-    --text: #443235;
+    --text: #534741;
     --hover: #e0e0e0;
-    --accent: #443235; 
+    --accent: #534741; 
     --article: #ffffff;
     --focus: #e5e5e5;
     --logo: #008037; 
     --ear: #007acc; 
-    --header: #ffffff;
-    --menu: #EAE5E6;
+    --header: #f6f5f4;
+    --menu: #edeae8;
     color-scheme: light; 
-    header .logo {color: #443235};
-    header {border-bottom: 1px solid #443235; background-color: #ffffff};
+    header .logo {color: #534741};
+    header {border-bottom: 1px solid #534741; background-color: var(--header)};
     main article {font-weight:400};
     #copy-message {color: #ffffff};
     .back-to-top {background-color: #454545};
-    nav#sidebar ul li a {color:#443235};
-    main article h1 { font-size: 1.1rem; font-weight: 400; margin: 0 0 0.6rem 0; color: #443235; }
-main article h2 { font-size: 0.9rem; font-weight: 500; margin: 0.7rem 0 0.6rem 0; color: #443235; }
+   
+    nav#sidebar ul li a {color:#534741};
+    main article h1 { font-size: 1.1rem; font-weight: 400; margin: 0 0 0.6rem 0; color: #534741; }
+main article h2 { font-size: 0.9rem; font-weight: 500; margin: 0.7rem 0 0.6rem 0; color: #534741; }
 main article h3 { font-size: 0.9rem; font-weight: 700; margin: 1rem 0 0.6rem 0; color: var(--text); }
-
+body {background: var(--bg)}
     .link {
     color: #015dc9;
     text-decoration: none;
@@ -48,7 +49,7 @@ main article h3 { font-size: 0.9rem; font-weight: 700; margin: 1rem 0 0.6rem 0; 
 .link:hover { color: #015dc9; text-decoration: underline; }
 .link:active { color: #015dc9; }
 
-.page-break {border-bottom: 1px solid #443235};
+.page-break {border-bottom: 1px solid #534741};
 
 .orange{
 color: #ff8c01;
@@ -65,26 +66,26 @@ color: #ED2938;
     @media (hover: none) and (pointer: coarse) {
     nav#sidebar ul li a:focus {
         outline: none;
-        background-color: #ffffff; /* match your tap color */
-        color: #443235;
+        background-color: #f6f5f4; /* match your tap color */
+        color: #534741;
     }
 }
 
 nav#sidebar ul li a.tap-active {
-  background-color: #ffffff;
-  color: #443235;
+  background-color: #f6f5f4;
+  color: #534741;
   transition: background-color 0.2s;
 }
 
 nav#sidebar ul li a.active {
-    background-color: #ffffff;
-    color: #443235;
+    background-color: #f6f5f4;
+    color: #534741;
 }
 
 @media (hover: hover) and (pointer: fine) {
     nav#sidebar ul li a:hover {
-        background-color: #ffffff;
-        color: #443235;
+        background-color: #f6f5f4;
+        color: #534741;
     }
 }
 
@@ -105,49 +106,49 @@ nav#sidebar ul li a.active {
     main article h2 { font-size: 1.05rem; font-weight: 500; margin: 0.7rem 0 0.6rem 0; color: var(--text); line-height: 1.7rem;}
     main article h3 { font-size: 0.9rem; font-weight: 700; margin: 1rem 0 0.6rem 0; color: var(--text); }
 
-    .border {background-color:#71535726}
+    .border {background-color:#edeae8}
     .back-to-top {
 
-  background-color: #EAE5E6;
+  background-color: #edeae8;
 
 }
 
 /* Arrow icon */
 .back-to-top::before {
 
-  border-left: 2px solid #443235;
-  border-bottom: 2px solid #443235;
+  border-left: 2px solid #534741;
+  border-bottom: 2px solid #534741;
 
 }
 
 .back-to-top.show:hover::before,
 .back-to-top.show:focus::before {
-  border-color: #443235;
+  border-color: #534741;
 }
 
     @media (hover: none) and (pointer: coarse) {
     nav#sidebar ul li a:focus {
         outline: none;
-        background-color: #71535726; /* match your tap color */
-        color: #443235;
+        background-color: #edeae8; /* match your tap color */
+        color: #534741;
     }
 }
 
 nav#sidebar ul li a.tap-active {
-  background-color: #71535726;
-  color: #443235;
+  background-color: #edeae8;
+  color: #534741;
   transition: background-color 0.2s;
 }
 
 nav#sidebar ul li a.active {
-    background-color: #71535726;
-    color: #443235;
+    background-color: #edeae8;
+    color: #534741;
 }
 
 @media (hover: hover) and (pointer: fine) {
     nav#sidebar ul li a:hover {
-        background-color: #71535726;
-        color: #443235;
+        background-color: #edeae8;
+        color: #534741;
     }
 }
 }
@@ -319,7 +320,7 @@ nav#sidebar {
     width: 240px;
     height: 100%;
     padding: 80px 20px 0 20px;
-    background-color: var(--menu);
+    background: var(--menu);
     line-height: 1rem;
     font-size: 0.8rem;
     font-weight: 500;
@@ -720,7 +721,7 @@ main {
     padding: 0;
     position: relative;
     z-index: 100;
-    background: var(--bg);
+    background: transparent;
     overflow-y: visible;
     -webkit-overflow-scrolling: touch;
 }
@@ -729,7 +730,7 @@ main article {
     max-width: 700px;
     margin: 0;
     padding: 23px 2rem;
-    background: var(--bg);
+    background: transparent;
     border-radius: 0.6rem;
     font-size: 0.85rem;
     font-weight: 400;
